{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "11cfcd02-fb9e-4669-acf3-6c6f920db4bd",
            "actions": [
                {
                    "name": "QueueEdur",
                    "type": "Button",
                    "id": "68512863-54f3-44cc-846f-905913d2396c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QueueCinos",
                    "type": "Button",
                    "id": "e0aa369c-11f2-4e9d-9afc-55d73a2a218b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QueueSoleis",
                    "type": "Button",
                    "id": "ec15c70d-a31f-49a8-94b0-710a455e0c0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CombineLumes",
                    "type": "Button",
                    "id": "2bd2882c-e736-4890-a18d-b1266f2cf794",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "9f6da866-d51c-4729-9425-e272045be8d0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CastSpell",
                    "type": "Button",
                    "id": "97066eb3-ffdd-4dd3-b631-95fb711cbcaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CancelSpellCast",
                    "type": "Button",
                    "id": "2d64ee09-1747-4984-98b5-193608733ba6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_X",
                    "type": "Button",
                    "id": "702f84cb-8d45-483c-bf47-dbfee3fa1936",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_Z",
                    "type": "Button",
                    "id": "c6013319-c54c-4685-bd8b-7a2a7f98cad6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ClickToMove",
                    "type": "Button",
                    "id": "a1a8f1e6-526f-45dd-9a68-c1441b4cee02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f308fde4-7a8c-4af9-ac39-5ee5d3d139ae",
                    "path": "<Keyboard>/c",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "QueueEdur",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75282fb2-3eb7-4cd2-8c7d-665950f4c140",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CombineLumes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07c7608d-4ff3-4bf6-bb92-9f4641445727",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2840342-954e-4717-8652-aa34584b38ed",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CastSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "badcd29f-b1dc-410b-8867-77ede43d4da4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CancelSpellCast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ae8f8a9-e3e1-45e1-9e9f-b5e44a7e0db3",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CancelSpellCast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93894eaa-6d39-4ec3-800c-2755086ff5fc",
                    "path": "<Keyboard>/v",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "QueueCinos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "f76a4b2c-60e4-46a5-b3fa-891b498b2142",
                    "path": "1DAxis",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d6de290b-b8ef-4eac-86ad-f4596ee9e758",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "fbddb97e-412b-4ab3-8d77-7be6d1e1b81e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "1169d4c5-2d66-4b77-bf6f-620b32aebbc7",
                    "path": "1DAxis",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Z",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "c7e5231f-a6fb-4274-b97f-2f52b5efc2a5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Z",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "30760f6f-34a2-47d8-a5a2-231de2bf34b1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Z",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "82cd7f58-3402-4ceb-a0db-481c7f4ba5c3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ClickToMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45f91dc3-9058-46c8-9797-cb2aeb81dead",
                    "path": "<Keyboard>/b",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "QueueSoleis",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "c9cc8f9a-789b-4562-ab53-f226134f085c",
            "actions": [
                {
                    "name": "EscButton",
                    "type": "Button",
                    "id": "fbc0db8d-1ba8-434f-bba8-ea9461dc3ed9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "e8e69683-df89-4d1d-9cfa-e395bb0179a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "6adde802-5002-4686-95de-903de9fb5c31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1fffce6d-b7cd-473d-98ff-4b46e752ea2f",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "EscButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f56a891-9d53-4ad6-b3ed-6fcdf9713a67",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa4d07f4-7871-4ffc-8190-d8092da65d11",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "d57f698e-e3f5-413f-9ed8-7bd7a6517beb",
            "actions": [
                {
                    "name": "OpenDebugMenu",
                    "type": "Button",
                    "id": "9097e14b-80a2-46f9-8360-117d74f04c49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3a17b666-eb93-46ba-91d7-1009dd1640ce",
                    "path": "<Keyboard>/backquote",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "OpenDebugMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}